# mvs-texturing

./: Dockerfile  Dockerfile_large  Dockerfile_test
apps/texrecon/: CMakeLists.txt
elibs/: CMakeLists.txt
libs/tex/: CMakeLists.txt  generate_texture_atlases.cpp  generate_texture_views.cpp  settings.h  texture_atlas.cpp  view_selection.cpp
